--- a/test/fixtures/jade/template.jade
+++ b/test/fixtures/jade/template.jade
@@ -4,6 +4,6 @@ html
 		title Go to Head
 		style(type="text/css").
 			span{border: 1px solid #dddddd;}
-		style(data-above-the-fold="true" type="text/css")
+		style(data-above-the-fold="true")
 	body
 		h1 Grunt plugin gotohead
