--- a/test/expected/jade/templateWithoutSignature.jade
+++ b/test/expected/jade/templateWithoutSignature.jade
@@ -4,6 +4,6 @@ html
 		title Go to Head
 		style(type="text/css").
 			span{border: 1px solid #dddddd;}
-		style(data-above-the-fold="true" type="text/css") body{font-size:100%}h1{font-size:2em}
+		style(data-above-the-fold="true") body{font-size:100%}h1{font-size:2em}
 	body
 		h1 Grunt plugin gotohead
